docs: Fix email

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"router",
 		"radix"
 	],
-	"author": "H2Owater425 <h2o@h2owr.xyz>",
+	"author": "H2Owater425 <h2o@dhmo.kr>",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/h2owater425/miyako/issues",
