docs: Fix email on bugs

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/h2owater425/miyako/issues",
-		"email": "h2o@h2owr.xyz"
+		"email": "h2o@dhmo.kr"
 	},
 	"homepage": "https://github.com/H2Owater425/miyako#readme",
 	"devDependencies": {
